@@ -1,5 +1,6 @@
 # Head
 
+- Implemented RIGHT funtion in C runtime
 - Inline blanks are treated as empty strings in MID and RIGHT functions
 - Fixed a bug in bounds checking when replacing arithmetic on ranges
 - Replace comparisons on arrays with arrays of comparisons
